--- a/landing_page.css
+++ b/landing_page.css
@@ -1,6 +1,3 @@
-* {
-}
-
 /* source-sans-pro-regular - latin */
 @font-face {
   font-family: "Source Sans Pro";
@@ -49,6 +46,7 @@ button {
   margin-right: 15px;
   margin-top: 14px;
   margin-bottom: 14px;
+  cursor: pointer;
 }
 
 .create-case {
@@ -64,6 +62,7 @@ button {
   margin-right: 15px;
   margin-top: 14px;
   margin-bottom: 14px;
+  cursor: pointer;
 }
 
 .sign-in-case {
@@ -204,7 +203,7 @@ p:nth-of-type(2) {
 }
 
 p:last-of-type {
-  font-family: Source Sans Pro;
+  font-family: "Source Sans Pro";
   font-style: normal;
   font-weight: 300;
   font-size: 0.8rem;
@@ -220,6 +219,23 @@ p img {
   width: 10%;
 }
 
+.sig {
+  display: flex;
+  justify-content: center;
+  width: 36px;
+  height: 36px;
+  background: #ff2d66;
+  border: 1px solid #ffffff;
+  box-sizing: border-box;
+  margin: 10px;
+  font-family: "Source Sans Pro";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 0.8rem;
+  line-height: 18px;
+  color: white;
+}
+
 .box-relate {
   position: relative;
   border-radius: 0px 0px 12px 12px;
@@ -227,9 +243,6 @@ p img {
 }
 
 @media (max-width: 500px) {
-  * {
-  }
-
   body {
     padding: 0;
     margin: 0;
@@ -257,6 +270,7 @@ p img {
     margin-right: 15px;
     margin-top: 14px;
     margin-bottom: 14px;
+    cursor: pointer;
   }
 
   .create-case {
@@ -272,6 +286,7 @@ p img {
     margin-right: 15px;
     margin-top: 14px;
     margin-bottom: 14px;
+    cursor: pointer;
   }
 
   .sign-in-case {
@@ -352,19 +367,18 @@ p img {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 100%;
+    max-width: 100%;
   }
 
   .bigbox2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 100%;
+    max-width: 100%;
   }
 
   .img-block-img {
     border-radius: 12px 12px 0px 0px;
-    display: block;
   }
 
   img {
@@ -373,12 +387,11 @@ p img {
   }
 
   .img-block {
-    z-index: 2;
-    width: 50%;
-    /*  */
+    max-width: 100%;
+    width: 100%;
     border-radius: 12px 12px 12px 12px;
     margin-bottom: 6vw;
-    margin-left: 14vw;
+    align-content: center;
   }
 
   p {
@@ -422,12 +435,16 @@ p img {
   }
 
   p img {
-    width: 10%;
+    width: 3%;
   }
 
   .box-relate {
     position: relative;
     border-radius: 0px 0px 12px 12px;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+  }
+
+  .sig {
+    display: none;
   }
 }
