--- a/index.css
+++ b/index.css
@@ -17,11 +17,11 @@
   background: #1E1E1E;
   }
   
-  /* Rectangle 2 */
-  .rectangle2{
+  /* logo */
+  .logo{
   position: absolute;
-  left: 0.78%;
-  right: 97.34%;
+  left: 1%;
+  width:30px;
   top: 20%;
   bottom: 20%;
   
@@ -68,18 +68,6 @@
   color: #000000;
   }
   
-  /* Rectangle 42 */
-  .rectangle42{
-  position: absolute;
-  left: 83.%;
-  right: 7.86%;
-  top: 23.33%;
-  bottom: 23.33%;
-  
-  background: #255AD4;
-  border-radius: 6px;
-  }
-  
   /* Create Account */
   .createAccount{
   left: 85.36%;
@@ -98,10 +86,11 @@
   color: #FFFFFF;
   }
   
-  /* Rectangle 41 */
-  .rectangle41{
+  /* signInButton */
+  .signInButton{
   position: absolute;
-  left: 93.33%;
+  margin-right: 1%;
+  width:70px;
   right: 0.78%;
   top: 23.33%;
   bottom: 23.33%;
@@ -110,36 +99,49 @@
   border-radius: 6px;
   }
   
+  /* accountButton */
+  .accountButton{
+    position: absolute;
+    margin-right: 1%;
+    width:130px;
+    right: 8.78%;
+    top: 23.33%;
+    bottom: 23.33%;
+    
+    background: #255AD4;
+    border-radius: 6px;
+    }
+  
   /* Sign In */
   .signIn{
   
-  left: 94.84%;
-  right: 2.29%;
-  top: 30%;
-  bottom: 26.67%;
-  
-  font-family: Source Sans Pro;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 15px;
-  line-height: 23px;
-  
-  background: none;
-  border-style: none;
-  color: #FFFFFF;
+    left: 94.84%;
+    right: 2.29%;
+    top: 30%;
+    bottom: 26.67%;
+    
+    font-family: Source Sans Pro;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 23px;
+    
+    background: none;
+    border-style: none;
+    color: #FFFFFF;
   }
   
   /*/////////////////////////////////*/
   
   
-  /* Rectangle 68 */
-  .rectangle68{
-  width:100%;
-  height: 210px;
-  left: 0px;
-  top: 60px;
+  /* headerImage */
+  .headerImage{
   
-  background: rgba(0, 0, 0, 0.31);
+  width:100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
   }
   
   /* Showcase. Upload. Discover. Share. */
@@ -164,14 +166,15 @@
   width: 95px;
   height: 30px;
   left: 55%;
-  top: 319px;
   
+  padding-top:2%;
   font-family: Source Sans Pro;
   font-style: normal;
   font-weight: bold;
   font-size: 24px;
   line-height: 30px;
-  
+  text-decoration: none;
+
   color: #949494;
   }
   
@@ -180,17 +183,177 @@
   width: 91px;
   height: 30px;
   left: 40%;
-  top: 319px;
   
+  padding-top:2%;
   font-family: Source Sans Pro;
   font-style: normal;
   font-weight: bold;
   font-size: 24px;
   line-height: 30px;
+  text-decoration: none;
   
-  color: #255AD4;
+  color: #949494;
   }
   
   .center{
-  max-width:100%;
+    display: flex;
+    justify-content: space-around;
+    max-width:100%;    
   }
+
+
+
+
+/* image one */
+.imageOne{
+
+  width: 90%;
+  padding: 2%;
+  
+}
+
+/* image two */
+.imageTwo{
+
+  width: 90%;
+  padding: 2%;
+  
+}
+
+/* image three */
+.imageThree{
+
+  width: 90%;
+  padding: 2%;
+  
+}
+
+/* image four */
+.imageFour{
+
+  width: 90%;
+  padding: 2%;
+  
+}
+
+/* image five */
+.imageFive{
+
+  width: 90%;
+  padding: 2%;
+  
+}      
+
+.topRow{
+  display: flex;
+  justify-content: center;
+  padding-top: 10%;
+}
+
+/* image five */
+.imageSix{
+  width: 90%;
+  padding: 2%;
+}      
+
+/* image five */
+.imageSeven{
+  width: 90%;
+  padding: 2%;
+}  
+
+/* image eight */
+.imageEight{
+  width: 90%;
+  padding: 2%;
+}  
+
+/* image nine */
+.imageNine{
+  width: 90%;
+  padding: 2%;
+}  
+
+/* image ten */
+.imageTen{
+  width: 90%;
+  padding: 2%;
+} 
+
+.bottomRow{
+  display: flex;
+  justify-content: center;
+  padding-top: 0%;
+}
+
+
+/* Rectangle 88 */
+.rectangle88{
+  position:relative;
+  bottom:30%;
+  width: 92%;
+  height: 27%;
+
+  background: #FFFFFF;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 0px 0px 12px 12px;
+}
+
+.blackLine{
+  position: relative;
+  top: 10%;
+  border: 1px solid #393939;
+  box-sizing: border-box;
+  border-radius: 0px 0px 12px 12px;
+  transform: matrix(1, 0, 0, -1, 0, 0);
+}
+
+.ninetyfour{
+  position: absolute;
+  top:40%;
+  left: 5%;
+
+font-family: Source Sans Pro;
+font-style: normal;
+font-weight: 300;
+font-size: 14px;
+line-height: 18px;
+color: #707070;
+}
+
+.eliares{
+  position: relative;
+  top:22%;
+  left: 5%;
+
+  font-family: Source Sans Pro;
+  font-style: light;
+  font-weight: 300;
+  font-size: 11px;
+  line-height: 18px;
+
+  color: #000000;
+}
+
+.heart{
+  position: absolute;
+  left: 14%;
+  right: 85.89%;
+  top: 63%;
+  bottom: 40.37%;
+}
+
+.title{
+  position: absolute;
+  left: 5%;
+  right: 83.18%;
+  bottom: 55%;
+
+  font-family: Source Sans Pro;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 18px;
+
+  color: #000000;
+}
