--- a/index.css
+++ b/index.css
@@ -301,7 +301,7 @@
 
 .blackLine{
   position: relative;
-  top: 10%;
+  top: 17%;
   border: 1px solid #393939;
   box-sizing: border-box;
   border-radius: 0px 0px 12px 12px;
@@ -310,7 +310,7 @@
 
 .ninetyfour{
   position: absolute;
-  top:40%;
+  top:45%;
   left: 5%;
 
 font-family: Source Sans Pro;
@@ -323,7 +323,7 @@ color: #707070;
 
 .eliares{
   position: relative;
-  top:22%;
+  top:27%;
   left: 5%;
 
   font-family: Source Sans Pro;
@@ -339,15 +339,14 @@ color: #707070;
   position: absolute;
   left: 14%;
   right: 85.89%;
-  top: 63%;
-  bottom: 40.37%;
+  top: 67%;
 }
 
 .title{
   position: absolute;
   left: 5%;
   right: 83.18%;
-  bottom: 55%;
+  bottom: 50%;
 
   font-family: Source Sans Pro;
   font-style: normal;
@@ -356,4 +355,328 @@ color: #707070;
   line-height: 18px;
 
   color: #000000;
+}
+
+
+
+
+@media screen and (max-width: 800px) {
+ /* image one */
+
+/* image one */
+.imageOne{
+
+  width: 90%;
+  padding-top:15%;
+  
+}
+
+/* image two */
+.imageTwo{
+
+  width: 90%;
+  padding-top:15%;
+  
+}
+
+/* image three */
+.imageThree{
+
+  width: 90%;
+  padding-top:15%;
+  
+}
+
+/* image four */
+.imageFour{
+
+  width: 90%;
+  padding-top:15%;
+  
+}
+
+/* image five */
+.imageFive{
+
+  width: 90%;
+  padding-top:15%;
+  
+}      
+
+
+.topRow{
+  display: flex;
+  align-content: center;
+ flex-direction: column;
+  padding:30%;
+  padding-top: 13%;
+  max-width: 60%;
+  padding-bottom: 5%;
+}
+
+
+/* image five */
+.imageSix{
+  width: 90%;
+}      
+
+/* image five */
+.imageSeven{
+  width: 90%;
+  padding-top:15%;
+}  
+
+/* image eight */
+.imageEight{
+  width: 90%;
+  padding-top:15%;
+}  
+
+/* image nine */
+.imageNine{
+  width: 90%;
+  padding-top:15%;
+}  
+
+/* image ten */
+.imageTen{
+  width: 90%;
+  padding-top:15%;
+} 
+
+.bottomRow{
+  display: flex;
+  align-content: center;
+  flex-direction: column;
+  padding:30%;
+  padding-top: 0%;
+  max-width: 60%;
+}
+
+
+
+/* Rectangle 88 */
+.rectangle88{
+  background: #FFFFFF;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 12px 12px 12px 12px;
+}
+
+.heart{
+  position: absolute;
+  left: 90%;
+  right: 85.89%;
+  top: 20%;
+}
+
+.title{
+  position: absolute;
+  left: 5%;
+  right: 83.18%;
+  bottom:-20%;
+
+  font-family: Source Sans Pro;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 18px;
+
+  color: #000000;
+}
+
+.eliares{
+  position: relative;
+  top:60%;
+  left: 35%;
+
+  font-family: Source Sans Pro;
+  font-style: light;
+  font-weight: 300;
+  font-size: 11px;
+  line-height: 18px;
+
+  color: #000000;
+}
+
+.ninetyfour{
+  position: absolute;
+  top:-25%;
+  left: 80%;
+
+  font-family: Source Sans Pro;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 18px;
+  color: #707070;
+}
+
+.blackLine{
+  position: absolute;
+  top:-25%;
+  border: 1px solid #393939;
+  border-radius: 0px 0px 12px 12px;
+  transform: matrix(1, 0, 0, -1, 0, 0);
+}
+
+.trending{
+padding: 1%;
+
+padding-top:2%;
+font-family: Source Sans Pro;
+font-style: normal;
+font-weight: bold;
+font-size: 24px;
+line-height: 30px;
+text-decoration: none;
+
+color: #949494;
+}
+
+.discover{
+  position: absolute;
+width: 91px;
+height: 30px;
+left: 40%;
+
+padding-top:2%;
+font-family: Source Sans Pro;
+font-style: normal;
+font-weight: bold;
+font-size: 24px;
+line-height: 30px;
+text-decoration: none;
+
+color: #949494;
+}
+
+
+
+
+
+.topNav{
+  position: relative;
+  width: 100%;
+  height: 100px;
+  }
+  
+  
+  /* Rectangle 1 */
+  .rectangle1{
+  position: absolute;
+  left: 0%;
+  right: 0%;
+  top: 0%;
+  bottom: 0%;
+  
+  background: #1E1E1E;
+  }
+  
+  /* logo */
+  .logo{
+  position: absolute;
+  left: 1%;
+  width:60px;
+  top: 20%;
+  bottom: 20%;
+  
+  background: #FF2D66;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+  }
+  
+  /* AR P . */
+  .arp{
+  margin-left: 15%;
+  font-family: Source Sans Pro;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 15px;
+  
+  color: #FFFFFF;
+  }
+  
+
+  
+  /* Search... */
+  .topNav input[type=text]{
+  position: absolute;
+  left: 15%;
+  right: 55%;
+  top: 35%;
+  bottom: 35%;
+  
+  font-family: Source Sans Pro;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 15px;
+  line-height: 23px;
+  
+  color: #000000;
+  }
+  
+  /* Create Account */
+  .createAccount{
+  left: 85.36%;
+  right: 8.39%;
+  top: 31.67%;
+  bottom: 25%;
+  
+  font-family: Source Sans Pro;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 15px;
+  line-height: 23px;
+  
+  background: none;
+  border-style: none;
+  color: #FFFFFF;
+  }
+  
+  /* signInButton */
+  .signInButton{
+  position: absolute;
+  margin-right: 1%;
+  width:70px;
+  left: 80%;
+  top: 33%;
+  bottom: 33%;
+  
+  background: #FF2D66;
+  border-radius: 6px;
+  }
+  
+  /* accountButton */
+  .accountButton{
+    position: absolute;
+    margin-right: 1%;
+    width:130px;
+    left: 55%;
+    top: 33%;
+    bottom: 33%;
+    
+    background: #255AD4;
+    border-radius: 6px;
+    }
+  
+  /* Sign In */
+  .signIn{
+  
+    left: 94.84%;
+    right: 2.29%;
+    top: 30%;
+    bottom: 26.67%;
+    
+    font-family: Source Sans Pro;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 23px;
+    
+    background: none;
+    border-style: none;
+    color: #FFFFFF;
+  }
+  
 }
